# EasyMCP

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  quality.yml  release.yml
example/: input.sh  mcp-sse.yaml  mcp.yaml
src/: main.rs
src/core/: closure.rs  config.rs  engine.rs  mod.rs  template.rs
