[package]
name = "dynamic_mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.5.0", features = [
    "server",
    "macros",
    "transport-sse-server",
    "transport-io",
    "transport-streamable-http-server",
    "auth",
] }
schemars = "1.0.4"
serde = "1.0.219"
tokio = { version = "1.47.1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std",
    "signal",
] }
tracing = "0.1.41"
