[package]
name = "dynamic_mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
futures-core = "0.3.31"
reqwest = { version = "0.12.23", features = ["json"] }
rmcp = { version = "0.5.0", features = [
    "server",
    "macros",
    "transport-sse-server",
    "transport-io",
    "transport-streamable-http-server",
    "auth",
] }
serde = "1.0.219"
serde_json = "1.0.145"
serde_valid = "1.0.5"
serde_yaml = "0.9.34"
tinytemplate = "1.2.1"
tokio = { version = "1.47.1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std",
    "signal",
    "process"
] }
urlencoding = "2.1.3"
regex = "1.11.2"
lazy_static = "1.5.0"
